# Spine-Database-API

./: .gitignore  .readthedocs.yml  .travis-deploy.sh  .travis.yml  CHANGELOG.md  COMMIT_5bffc9c_ANALYSIS.md  MANIFEST.in  README.md  README_dev.md  deploy-key.enc  dev-requirements.txt  docs-requirements.txt  io.jl  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: run_unit_tests.yml
benchmarks/: README.md  arrow_map_from_database.py  datetime_from_database.py  entity_class_mapping_import_row.py  from_database_to_dimension_count_with_nested_map_type.py  get_parameter_value_items.py  map_from_database.py  mapped_item_getitem.py  type_for_scalar.py  update_default_value_to_different_value.py  update_default_value_to_same_value.py  utils.py
docs/: requirements.txt
docs/source/: conf.py  database_mapping.rst  diffdatabasemapping.rst  filters.rst  front_matter.rst  helpers.rst  import_functions.rst  index.rst  metadata.rst  metadata_description.rst  parameter_value_format.rst  results_metadata_description.rst  tutorial.rst  user_guide.rst
docs/source/autogen_apidocs/: modules.rst  spinedb_api.rst
spine_dbapi/: database_mapping.py  helpers.py
spinedatabase_api/: __init__.py  database_mapping.py  diff_database_mapping.py  exception.py  helpers.py  import_functions.py  json_mapping.py  spinedatabase_api.py  temp_database_mapping.py
spinedatabase_api/alembic/versions/: 51fd7b69acf7_add_parameter_class_and_parameter_.py  51fd7b69acf7_add_parameter_tag_and_parameter_enum.py  51fd7b69acf7_add_parameter_tag_and_parameter_value_list.py  (+1 more)
spinedb_api/: __init__.py  _add_diff_database_mapping.py  _base_diff_database_mapping.py  _check_diff_database_mapping.py  _remove_diff_database_mapping.py  _update_diff_database_mapping.py  alembic.ini  alternative_value_filter.py  arrow_value.py  check_functions.py  compatibility.py  conflict_resolution.py  database_mapping.py  database_mapping_base.py  database_mapping_check.py  database_mapping_check_mixin.py  database_mapping_query.py  database_mapping_query_mixin.py  dataframes.py  db_cache.py  db_cache_base.py  db_cache_impl.py  db_mapping.py  db_mapping_add_mixin.py  db_mapping_aur_mixin.py  db_mapping_base.py  db_mapping_check_mixin.py  db_mapping_commit_mixin.py  db_mapping_helpers.py  db_mapping_query_mixin.py  db_mapping_remove_mixin.py  db_mapping_update_mixin.py  diff_database_mapping.py  diff_database_mapping_add.py  diff_database_mapping_add_mixin.py  diff_database_mapping_base.py  diff_database_mapping_check.py  diff_database_mapping_commit.py  diff_database_mapping_commit_mixin.py  diff_database_mapping_remove.py  (+40 more)
spinedb_api/alembic/: env.py
spinedb_api/compat/: compatibility_transformations.py  converters.py  data_transition.py  encode.py  reencode_for_data_transition.py
spinedb_api/export_mapping/: __init__.py  export_mapping.py  generator.py  group_functions.py  item_export_mapping.py  light_parameter_value.py  pivot.py  settings.py
spinedb_api/filters/: __init__.py  alternative_filter.py  execution_filter.py  filter_stacks.py  query_utils.py  renamer.py  scenario_filter.py  tool_filter.py  tools.py  url_tools.py  value_transformer.py
spinedb_api/import_mapping/: __init__.py  generator.py  import_mapping.py  import_mapping_compat.py  import_mapping_functions.py  item_import_mapping.py  parameter_import_mapping.py  single_import_mapping.py  type_conversion.py
spinedb_api/spine_io/: __init__.py  gdx_utils.py  io_api.py  mapping.py  type_conversion.py
test/: test_DiffDatabaseMapping.py  test_database_mapping.py  test_helpers.py  test_import_functions.py  test_json_mapping.py  test_migration.py  test_parameter_value.py
tests/: __init__.py  conftest.py  custom_db_mapping.py  mock_helpers.py  test_DatabaseMapping.py  test_DiffDatabaseMapping.py  test_QuickDatabaseMapping.py  test_ScenarioFilterMapping.py  test_alembic_migration.py  test_alternative_value_filter.py  test_arrow_value.py  test_check_functions.py  test_check_integrity.py  test_compat_converters.py  test_compat_encode.py  test_database_mapping.py  test_dataframes.py  test_db_cache_base.py  test_db_mapping_base.py  test_db_mapping_helpers.py  test_db_mapping_interface.py  test_db_server.py  test_export_functions.py  test_filtered_database_mapping.py  test_helpers.py  test_import_functions.py  test_import_mapping.py  test_incomplete_values.py  test_item_id.py  test_json_mapping.py  test_mapping.py  test_migration.py  test_models.py  test_parameter_definitions.py  test_parameter_groups.py  test_parameter_value.py  test_parameter_value_lists.py  test_purge.py  test_scenario_recipes.py  test_spine_db_client.py  (+2 more)
tests/compat/: test_data_transition.py
tests/export_mapping/: __init__.py  test_export_mapping.py  test_item_export_mapping.py  test_pivot.py  test_settings.py
tests/filters/: __init__.py  test_alternative_filter.py  test_alternative_scenario_filter.py  test_execution_filter.py  test_filter_stacks.py  test_renamer.py  test_scenario_filter.py  test_tool_filter.py  test_tools.py  test_url_tools.py  test_value_transformer.py
tests/import_mapping/: test_generator.py  test_import_mapping.py  test_type_conversion.py
tests/legacy_databases/: 070a0eb89e88.sqlite  39e860a11b05.sqlite  989fccf80441.sqlite
tests/spine_io/: __init__.py  test_excel_integration.py  test_gdx_utils.py  test_type_coversion.py
(+67 files in other folders)
