######################################################################################################################
# Copyright (C) 2021 Spine project consortium
# This file is part of Spine Toolbox.
# Spine Toolbox is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General
# Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option)
# any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
# Public License for more details. You should have received a copy of the GNU Lesser General Public License along with
# this program. If not, see <http://www.gnu.org/licenses/>.
######################################################################################################################

[metadata]
name = spinedb_api
version = 0.12.2.dev0
author = Spine Project consortium
author_email = spine_info@vtt.fi
license = LGPL-3.0-or-later
description = An API to talk to Spine databases.
url = https://github.com/Spine-project/Spine-Database-API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    sqlalchemy>=1.3, <1.4
    alembic>=1.5.8
    faker>=8.1.2
    python-dateutil>=2.8.1
    numpy>=1.20.2
    openpyxl>=3.0.7
    gdx2py>=2.1.1
    ijson>=3.1.4
    importlib_metadata
include_package_data = True

[options.packages.find]
exclude = tests*
